[package]
name = "offline_payment_mpv"
version = "0.1.0"
edition = "2024"

[dependencies]
chacha20poly1305 = "0.10.1"
chrono = "0.4.40"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
hex = "0.4.3"
hkdf = "0.12.4"
lmdb = "0.8.0"
merkletree = "0.23.0"
rand = "0.8.5"
rand_core = "0.6.4"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
sha2 = "0.10.8"
uuid = { version = "1.16.0", features = ["v4"] }
x25519-dalek = "2.0.1"
